--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "shipping-service",
+  "name": "shipping-service-17",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest tests",
+    "start": "node src/app.js"
+  },
+  "engines": {
+    "node": "8.11.3",
+    "npm": "5.6.x"
   },
   "repository": {
     "type": "git",
@@ -16,5 +21,13 @@
   "bugs": {
     "url": "https://github.com/AyakoIshii/shipping-service/issues"
   },
-  "homepage": "https://github.com/AyakoIshii/shipping-service#readme"
+  "homepage": "https://github.com/AyakoIshii/shipping-service#readme",
+  "devDependencies": {
+    "nock": "^13.0.4",
+    "sinon": "^9.0.3"
+  },
+  "dependencies": {
+    "axios": "^0.20.0",
+    "express": "^4.17.1"
+  }
 }
